<resources>
    <string name="app_name">Technical-Fest</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_attractions">Attractions</string>
    <string name="title_events">Events</string>
    <string name="title_profile">Profile</string>
    <string name="txt_navigation_icon">Navigation icon</string>
    <string name="the_tagline">The Tagline</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="txt_upgrade_pass">Upgrade Pass</string>
    <string name="txt_log_out">Log Out</string>
    <string name="sample_name">Priyansh Nama</string>
    <string name="sample_email">priyanshnama@gmail.com</string>
    <string name="sample_festId">PN6756675654</string>
    <string name="sample_pass">0</string>

<!--    social links  -->
    <string name="facebook">https://facebook.com/iiitdmj.invicta</string>
    <string name="instagram">https://instagram.com/invicta20_iiitdmj/</string>
    <string name="website">https://invicta20.org/</string>

    <string name="aps">Astronomy</string>
    <string name="coding">Programming</string>
    <string name="photo">Photography</string>
    <string name="bmc">Business Management</string>
    <string name="electronics">Electronics</string>
    <string name="racing">Racing</string>
    <string name="robotics">Robotics</string>
    <string name="afc">Automotive and Fabrication</string>
    <string name="cad">CAD and 3D Printing</string>
    <string name="participate">Participate</string>
    <string name="back">back</string>
    <string name="event_poster">Event Poster</string>
    <string name="email">email</string>
    <string name="call">call</string>
    <string name="rules">Show Rules</string>
    <string name="calendar_icon">calendar_icon</string>
    <string name="clock_icon">clock_icon</string>
    <string name="location_marker">location_marker</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_the_fest">About The Fest</string>
    <string name="ca_portal">CA Portal</string>
    <string name="team_and_administration">Team and Administration</string>
    <string name="logout">Logout</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="phone">Phone</string>
    <string name="facebook_logo">Facebook Logo</string>
    <string name="instagram_logo">Instagram Logo</string>
    <string name="website_logo">Website Logo</string>
    <string name="send">Send</string>

    <string-array name="clubs">
        <item>Astronomy</item>
        <item>Photography</item>
        <item>Business Management</item>
        <item>Programming</item>
        <item>Electronics</item>
        <item>Racing</item>
        <item>Robotics</item>
        <item>Automotive and Fabrication</item>
        <item>CAD and 3D Printing</item>
    </string-array>
</resources>