<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_mobile_navigation"
    app:startDestination="@+id/navigation_attractions">

    <fragment
        android:id="@+id/navigation_attractions"
        android:name="com.priyanshnama.technical_fest.ui.home.AttractionsFragment"
        android:label="@string/title_attractions"
        tools:layout="@layout/fragment_attractions" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.priyanshnama.technical_fest.ui.events.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.priyanshnama.technical_fest.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.priyanshnama.technical_fest.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>