<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".ui.options.ContactUsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:layout_weight="5">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="@dimen/card_margin"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_left_arrow"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/contact_us"
            app:srcCompat="@drawable/contact_us" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/contact_us"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textSize="32sp"/>

    </FrameLayout>

    <EditText
        android:id="@+id/phone"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_margin="12dp"
        android:layout_weight="1"
        android:autofillHints="Phone"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:layout_weight="1"
        android:autofillHints="Subject"
        android:hint="@string/subject"
        android:inputType="textPersonName"
        android:padding="12dp" />

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:layout_weight="3"
        android:autofillHints="Message"
        android:hint="@string/message"
        android:inputType="textMultiLine"
        android:padding="12dp" />

    <ImageButton
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_margin="@dimen/card_margin"
        android:layout_gravity="bottom|center_horizontal"
        android:contentDescription="@string/send"
        android:src="@drawable/ic_send" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/facebook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:padding="@dimen/card_margin"
            android:src="@drawable/ic_facebook"
            android:contentDescription="@string/facebook_logo" />

        <ImageButton
            android:id="@+id/instagram"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:padding="@dimen/card_margin"
            android:src="@drawable/ic_instagram"
            android:contentDescription="@string/instagram_logo" />

        <ImageButton
            android:id="@+id/website"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:padding="@dimen/card_margin"
            android:src="@drawable/ic_web"
            android:contentDescription="@string/website_logo" />

    </LinearLayout>

</LinearLayout>