<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/event_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/event_poster"
        app:layout_constraintBottom_toTopOf="@+id/imagePrize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/imagePrize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/prize"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="18sp"
        android:autoSizeStepGranularity="6sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/prizeDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imagePrize" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/prizeDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="18sp"
        android:autoSizeStepGranularity="6sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/g7030"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/prizeDesc" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g7030"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/calendar_icon"
        app:layout_constraintBottom_toBottomOf="@+id/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/date"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_calendar" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/info_text_size"
        app:layout_constraintStart_toEndOf="@+id/calendar"
        app:layout_constraintTop_toTopOf="@+id/g7030" />

    <ImageView
        android:id="@+id/clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/clock_icon"
        app:layout_constraintBottom_toBottomOf="@+id/time"
        app:layout_constraintStart_toStartOf="@+id/calendar"
        app:layout_constraintTop_toTopOf="@+id/time"
        app:srcCompat="@drawable/ic_clock" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/info_text_size"
        app:layout_constraintBottom_toTopOf="@+id/venue"
        app:layout_constraintStart_toStartOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <ImageView
        android:id="@+id/locate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/location_marker"
        app:layout_constraintBottom_toBottomOf="@+id/venue"
        app:layout_constraintStart_toStartOf="@+id/calendar"
        app:layout_constraintTop_toTopOf="@+id/venue"
        app:srcCompat="@drawable/ic_google_maps" />

    <TextView
        android:id="@+id/venue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/info_text_size"
        app:layout_constraintBottom_toTopOf="@+id/participate"
        app:layout_constraintStart_toStartOf="@+id/date" />

    <Button
        android:id="@+id/participate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/participate"
        app:layout_constraintBottom_toTopOf="@+id/rules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rules"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/rules"
        android:textColor="@color/black"
        android:padding="@dimen/card_margin"
        android:textSize="@dimen/info_text_size"
        app:layout_constraintBottom_toTopOf="@+id/contact_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/contact_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/info_text_size" />

        <ImageView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="@dimen/card_margin"
            android:contentDescription="@string/email"
            app:srcCompat="@drawable/ic_email" />

        <ImageView
            android:id="@+id/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_marginBottom="@dimen/card_margin"
            android:contentDescription="@string/call"
            app:srcCompat="@drawable/ic_call" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>