<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/events"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_margin"
        android:layout_marginEnd="@dimen/card_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/kaushan_script"
            android:gravity="center"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="60sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:padding="6dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:contentDescription="@string/racing"
                android:src="@drawable/racing" />

            <TextView
                android:id="@+id/racing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="24dp"
                android:text="@string/racing" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:padding="6dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:contentDescription="@string/aps"
                android:src="@drawable/aps" />

            <TextView
                android:id="@+id/aps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="24dp"
                android:text="@string/aps" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:padding="6dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:contentDescription="@string/coding"
                android:src="@drawable/programming" />

            <TextView
                android:id="@+id/coding"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="24dp"
                android:text="@string/coding" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:padding="6dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:contentDescription="@string/cad"
                android:src="@drawable/cad" />

            <TextView
                android:id="@+id/cad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="24dp"
                android:text="@string/cad" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:padding="6dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:contentDescription="@string/afc"
                android:src="@drawable/afc" />

            <TextView
                android:id="@+id/afc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="24dp"
                android:text="@string/afc" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:padding="6dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:contentDescription="@string/photo"
                android:src="@drawable/photo" />

            <TextView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="24dp"
                android:text="@string/photo" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:padding="6dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:contentDescription="@string/electronics"
                android:src="@drawable/electronics" />

            <TextView
                android:id="@+id/electronics"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="24dp"
                android:text="@string/electronics" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:padding="6dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:contentDescription="@string/bmc"
                android:src="@drawable/bmc" />

            <TextView
                android:id="@+id/bmc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="24dp"
                android:text="@string/bmc" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:padding="6dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:contentDescription="@string/robotics"
                android:src="@drawable/robotics" />

            <TextView
                android:id="@+id/robotics"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="24dp"
                android:text="@string/robotics" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>